[gd_scene load_steps=63 format=2]

[ext_resource path="res://components/player/Player.gd" type="Script" id=1]
[ext_resource path="res://assets/character/walk_eye/character_walk_eye_04.png" type="Texture" id=2]
[ext_resource path="res://assets/character/walk_default/character_body_001.png" type="Texture" id=3]
[ext_resource path="res://assets/character/walk_eye/character_walk_eye_08.png" type="Texture" id=4]
[ext_resource path="res://assets/character/walk_eye/character_walk_eye_02.png" type="Texture" id=5]
[ext_resource path="res://assets/light/light.png" type="Texture" id=6]
[ext_resource path="res://assets/character/walk_default/character_body_013.png" type="Texture" id=7]
[ext_resource path="res://assets/character/walk_default/character_body_012.png" type="Texture" id=8]
[ext_resource path="res://assets/character/walk_default/character_body_002.png" type="Texture" id=9]
[ext_resource path="res://assets/character/walk_default/character_body_007.png" type="Texture" id=10]
[ext_resource path="res://assets/character/walk_default/character_body_010.png" type="Texture" id=11]
[ext_resource path="res://assets/character/walk_default/character_body_008.png" type="Texture" id=12]
[ext_resource path="res://assets/character/walk_default/character_body_004.png" type="Texture" id=13]
[ext_resource path="res://assets/character/walk_default/character_body_014.png" type="Texture" id=14]
[ext_resource path="res://assets/character/walk_default/character_body_003.png" type="Texture" id=15]
[ext_resource path="res://assets/character/walk_default/character_body_006.png" type="Texture" id=16]
[ext_resource path="res://assets/character/walk_default/character_body_009.png" type="Texture" id=17]
[ext_resource path="res://assets/character/walk_default/character_body_015.png" type="Texture" id=18]
[ext_resource path="res://assets/character/walk_default/character_body_016.png" type="Texture" id=19]
[ext_resource path="res://assets/character/walk_default/character_body_000.png" type="Texture" id=20]
[ext_resource path="res://assets/character/walk_default/character_body_005.png" type="Texture" id=21]
[ext_resource path="res://assets/character/walk_default/character_body_011.png" type="Texture" id=22]
[ext_resource path="res://assets/character/walk_eye/character_walk_eye_14.png" type="Texture" id=23]
[ext_resource path="res://assets/character/walk_eye/character_walk_eye_15.png" type="Texture" id=24]
[ext_resource path="res://assets/character/walk_eye/character_walk_eye_05.png" type="Texture" id=25]
[ext_resource path="res://assets/character/walk_eye/character_walk_eye_06.png" type="Texture" id=26]
[ext_resource path="res://assets/character/walk_eye/character_walk_eye_00.png" type="Texture" id=27]
[ext_resource path="res://assets/character/walk_eye/character_walk_eye_03.png" type="Texture" id=28]
[ext_resource path="res://assets/character/walk_eye/character_walk_eye_16.png" type="Texture" id=29]
[ext_resource path="res://assets/character/walk_eye/character_walk_eye_10.png" type="Texture" id=30]
[ext_resource path="res://assets/character/walk_eye/character_walk_eye_07.png" type="Texture" id=31]
[ext_resource path="res://assets/character/walk_eye/character_walk_eye_12.png" type="Texture" id=32]
[ext_resource path="res://assets/character/walk_eye/character_walk_eye_11.png" type="Texture" id=33]
[ext_resource path="res://assets/character/walk_eye/character_walk_eye_01.png" type="Texture" id=34]
[ext_resource path="res://assets/character/walk_eye/character_walk_eye_13.png" type="Texture" id=35]
[ext_resource path="res://assets/character/walk_eye/character_walk_eye_09.png" type="Texture" id=36]
[ext_resource path="res://assets/character/snow/character_snow_14.png" type="Texture" id=37]
[ext_resource path="res://assets/character/snow/character_snow_15.png" type="Texture" id=38]
[ext_resource path="res://assets/character/snow/character_snow_16.png" type="Texture" id=39]
[ext_resource path="res://assets/character/snow/character_snow_04.png" type="Texture" id=40]
[ext_resource path="res://assets/character/snow/character_snow_07.png" type="Texture" id=41]
[ext_resource path="res://assets/character/snow/character_snow_10.png" type="Texture" id=42]
[ext_resource path="res://assets/character/snow/character_snow_00.png" type="Texture" id=43]
[ext_resource path="res://assets/character/snow/character_snow_11.png" type="Texture" id=44]
[ext_resource path="res://assets/character/snow/character_snow_01.png" type="Texture" id=45]
[ext_resource path="res://assets/character/snow/character_snow_13.png" type="Texture" id=46]
[ext_resource path="res://assets/character/snow/character_snow_02.png" type="Texture" id=47]
[ext_resource path="res://assets/character/snow/character_snow_12.png" type="Texture" id=48]
[ext_resource path="res://assets/character/snow/character_snow_09.png" type="Texture" id=49]
[ext_resource path="res://assets/character/snow/character_snow_05.png" type="Texture" id=50]
[ext_resource path="res://assets/character/snow/character_snow_06.png" type="Texture" id=51]
[ext_resource path="res://assets/character/snow/character_snow_08.png" type="Texture" id=52]
[ext_resource path="res://assets/character/snow/character_snow_03.png" type="Texture" id=53]
[ext_resource path="res://components/player/last_outpost_sound_pickup.wav" type="AudioStream" id=54]
[ext_resource path="res://components/player/last_outpost_sound_walking_snow.ogg" type="AudioStream" id=55]

[sub_resource type="OccluderPolygon2D" id=4]
polygon = PoolVector2Array( -16, -8, -16, 0, -8, 8, 8, 8, 16, 0, 16, -8, 8, -16, -8, -16 )

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 16, 5 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 20 ) ],
"loop": true,
"name": "stand",
"speed": 5.0
}, {
"frames": [ ExtResource( 27 ) ],
"loop": true,
"name": "stand_eye",
"speed": 5.0
}, {
"frames": [ ExtResource( 20 ), ExtResource( 3 ), ExtResource( 9 ), ExtResource( 15 ), ExtResource( 13 ), ExtResource( 21 ), ExtResource( 16 ), ExtResource( 10 ), ExtResource( 12 ), ExtResource( 17 ), ExtResource( 11 ), ExtResource( 22 ), ExtResource( 8 ), ExtResource( 7 ), ExtResource( 14 ), ExtResource( 18 ), ExtResource( 19 ) ],
"loop": true,
"name": "walk",
"speed": 30.0
}, {
"frames": [ ExtResource( 27 ), ExtResource( 34 ), ExtResource( 5 ), ExtResource( 28 ), ExtResource( 2 ), ExtResource( 25 ), ExtResource( 26 ), ExtResource( 31 ), ExtResource( 4 ), ExtResource( 36 ), ExtResource( 30 ), ExtResource( 33 ), ExtResource( 32 ), ExtResource( 35 ), ExtResource( 23 ), ExtResource( 24 ), ExtResource( 29 ) ],
"loop": true,
"name": "walk_eye",
"speed": 30.0
} ]

[sub_resource type="SpriteFrames" id=7]
animations = [ {
"frames": [ ExtResource( 43 ), ExtResource( 45 ), ExtResource( 47 ), ExtResource( 53 ), ExtResource( 40 ), ExtResource( 50 ), ExtResource( 51 ), ExtResource( 41 ), ExtResource( 52 ), ExtResource( 49 ), ExtResource( 42 ), ExtResource( 44 ), ExtResource( 48 ), ExtResource( 46 ), ExtResource( 37 ), ExtResource( 38 ), ExtResource( 39 ) ],
"loop": true,
"name": "default",
"speed": 30.0
} ]

[sub_resource type="CircleShape2D" id=3]
radius = 63.43

[sub_resource type="Animation" id=5]
resource_name = "LightPulse"
length = 3.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Light2D:texture_scale")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.5, 3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.9, 0.8, 0.9 ]
}

[sub_resource type="Animation" id=6]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Light2D:texture_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 1.0 ]
}

[node name="Player" type="KinematicBody2D" groups=["scene_manager_entity_nodes"]]
collision_layer = 5
script = ExtResource( 1 )
__meta__ = {
"entity_name": "Player"
}

[node name="PickupSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 54 )
volume_db = -8.0

[node name="SnowWalkSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 55 )
volume_db = -6.0

[node name="LightOccluder2D" type="LightOccluder2D" parent="."]
occluder = SubResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
light_mask = 4
position = Vector2( 0, -112 )
scale = Vector2( 0.218, 0.218 )
frames = SubResource( 2 )
animation = "stand_eye"

[node name="Snow" type="AnimatedSprite" parent="."]
visible = false
position = Vector2( 0, -112 )
scale = Vector2( 0.218, 0.218 )
frames = SubResource( 7 )

[node name="InteractArea2D" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="InteractArea2D"]
shape = SubResource( 3 )

[node name="Light2D" type="Light2D" parent="."]
position = Vector2( 11, -96 )
texture = ExtResource( 6 )
color = Color( 1, 0.458824, 0.196078, 1 )
energy = 0.0
range_item_cull_mask = 5

[node name="LightAnimation" type="AnimationPlayer" parent="."]
anims/LightPulse = SubResource( 5 )
anims/RESET = SubResource( 6 )

[node name="LightTween" type="Tween" parent="."]

[node name="Self-Light" type="Light2D" parent="."]
light_mask = 4
texture = ExtResource( 6 )
range_item_cull_mask = 4
__meta__ = {
"_edit_lock_": true
}

[connection signal="frame_changed" from="AnimatedSprite" to="." method="_on_AnimatedSprite_frame_changed"]
[connection signal="body_entered" from="InteractArea2D" to="." method="_on_InteractArea2D_body_entered"]
[connection signal="body_exited" from="InteractArea2D" to="." method="_on_InteractArea2D_body_exited"]
